Changelog
=========

1.2 - unreleased
----------------

1.1.1 - 2012-02-24
------------------

- fixed broken 1.1 release [petschki]

1.1 (2012-02-13)
----------------

- fixed unicode errors for non-ascii keyword value support [petschki]
- ui improved to keep newly entered categories on form errors [petschki]

1.0.1 (2009-09-29)
------------------

- updated setup.cfg


1.0 (2009-09-29)
----------------

* Initial release
