@@ -4,6 +4,11 @@ Changelog
 1.2 - unreleased
 ----------------
 
+- added option to specify index_name as field parameter. This is useful
+  eg. for 'subjects' field which should read it's data from 'Subject' 
+  index. If not set, field name is used.
+  [naro]
+  
 1.1.1 - 2012-02-24
 ------------------
 
